Fixed where on hovering navbar items they would not be visible

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -322,7 +322,7 @@ a {
 }
 
 a:hover {
-  color: #3a3235 !important;
+  color: #726c6c !important;
 }
 
 strong,
